<resources>
    <string name="app_name">Swap</string>
    <string name="enter_items_top_bar" translatable="false">Post Item</string>
    <string name="item_category_textview">Select Category</string>
    <string name="item_description_textview">Description</string>
    <string name="item_name_textview">Item Name</string>
    <string name="my_location_textview">My Location</string>
    <string name="image_textview">Image</string>
    <string name="submit_item">Submit Item</string>
    <string name="valued_price_textview">Valued Price</string>

    <string-array name="categories_array">
        <item>Books and School</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Men Clothing</item>
        <item>Women Clothing</item>
    </string-array>

    <string name="category_label_books">Books</string>
    <string name="category_label_clothes">Clothes</string>
    <string name="good_price_range" translatable="false">Kshs. %1$d</string>
    <string name="goods_list_category_label">Category: %1$s</string>
    <string name="search_menu_item_title">Search</string>
    <string name="search_activity_label">Search Results</string>
    <string name="item_list_loading_retry_btn_label">Retry</string>
    <string name="title_activity_good_details" translatable="false">GoodDetailsActivity</string>

    <string name="good_details_price_approx">Around: Kshs. %s</string>
    <string name="title_activity_post_good" translatable="false">PostGoodActivity</string>

    <string name="insert_item_images_fragment_title">Insert Item Images</string>
    <string name="main_image">Main Image</string>
    <string name="add_image">Add Image</string>
    <string name="supplementary_images">Supplementary Images</string>
    <string name="next">Next</string>
    <string name="item_name_and_description">Item Name and Description</string>
    <string name="item_name">Item Name</string>
    <string name="item_name_element_hint">Insert item name</string>
    <string name="post_item_form_validation_error">All fields with * are required</string>
    <string name="post_item_image_validation_error">Main image required</string>
    <string name="user_preferences_file" translatable="false">com.example.swap.USER_PREFERENCE_FILES</string>

    <string name="server_client_id" translatable="false">84913860976-2htunkve88135e98akhtuetr5db4eb7q.apps.googleusercontent.com</string>
    <string name="required_validation_error">*Required</string>
    <string name="internal_storage" translatable="false">INTERNAL_STORAGE</string>

    <string name="login">LOGIN</string>
    <string name="register_for_an_account">Register for an account</string>
    <string name="enter_first_name_here">Enter First Name Here</string>
    <string name="enter_last_name_here">Enter Last Name Here</string>
    <string name="enter_email_here">Enter Email Here</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="confirm_password_here">Confirm Password Here</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="register">Register</string>
    <string name="enter_passwordlogin_here">Enter Password Here</string>
    <string name="enter_email_address_here">Enter Email Here</string>
    <string name="register_here">Register Here</string>
    <string name="log_in">Login</string>

    <string name="make_offer">Make offer</string>
    <string name="title_activity_select_items_to_exchange" translatable="false">SelectItemsToExchangeActivity</string>
    <string name="swap_with">Swap with...</string>
    <string name="item_image">Item\'s image</string>
    <string name="no_items_selected">No items selected</string>
    <string name="no_items_swap_with_msg">You have no items to swap with!</string>
    <string name="post_item" translatable="false">Post item</string>
    <string name="title_activity_offers" translatable="false">OffersActivity</string>
    <string name="your_offers">Your offers</string>
    <string name="for_text">For:</string>
    <string name="item_offer_offering">Offering:</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="retry">Retry</string>
    <string name="label_from">From: %s</string>
    <string name="label_price_estimate">Price Estimate: Kshs. %s</string>
    <string name="network_error_message">There is a problem with your internet connection</string>
    <string name="no_offers_yet_message">You have not received any offers yet!</string>
    <string name="add_post">Add Post</string>
    <string name="title_activity_user_goods">UserGoodsActivity</string>
</resources>
