<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/insert_images_fragment_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_item_images_fragment_title" />

                <TextView
                    android:id="@+id/insert_images_fragment_subtitle"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:text="Choose a main image that will be displayed on feeds and other images that can be viewed when an item is selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E9E9E9"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_image"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

                    <ImageView
                        android:id="@+id/main_image_iv"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/image_view_border"
                        android:padding="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_main_img"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/add_image" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplementary_images"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/supplementary_imgs_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:flexWrap="wrap">

                    <!--SUPPLEMENTARY IMAGE_VIEWS GO HERE-->

                </com.google.android.flexbox.FlexboxLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_supplementary_imgs"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>