<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_offer"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:clickable="false"
    android:focusable="false"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/md_keylines">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/md_keylines">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/item_offer_bidder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="John Gachihi" />

                <TextView
                    android:id="@+id/item_offer_bidder_email"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DBD8D8"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/md_keylines"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:text="@string/for_text" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/item_offer_wanted_good_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        tools:srcCompat="@tools:sample/avatars[10]" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_keylines">

                        <TextView
                            android:id="@+id/item_offer_wanted_good_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            tools:text="Sweet bananas"/>

                        <TextView
                            android:id="@+id/item_offer_wanted_good_price_estimate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textColor="@color/medium_grey"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Price estimate: Kshs. 1000"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DBD8D8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/md_keylines"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/item_offer_offering"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <LinearLayout
                android:id="@+id/item_offer_offered_goods_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
<!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:srcCompat="@tools:sample/avatars[13]" />

                    <LinearLayout
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            tools:text="Tangy Tangering"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Price Estimate: Kshs.1200"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:srcCompat="@tools:sample/avatars[6]" />

                    <LinearLayout
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Onions Flamyonge" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Price Estimate: Kshs. 500" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:srcCompat="@tools:sample/avatars[3]" />

                    <LinearLayout
                        android:layout_marginLeft="@dimen/md_keylines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            tools:text="Tangy Tangering"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Price Estimate: Kshs.1200"/>
                    </LinearLayout>
                </LinearLayout>-->
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_offer_accept_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                tools:text="Accept"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
